# imperium-unified

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  HANDOFF.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: README.md  pyproject.toml
backend/data/: ager_state.json
backend/src/: __init__.py
backend/src/ager/: __init__.py  app.py  app_gameplay.py  container.py  models.py  ports.py  settings.py
backend/src/ager/adapters/: __init__.py  file_engine.py  memory_engine.py  sql_engine.py
backend/src/ager/ai_diplomacy/: __init__.py  api.py  dtos.py  rules.py
backend/src/ager/ai_diplomacy/services/: __init__.py  evaluator.py  proposer.py  store.py  store_impl.py  treaty.py
backend/src/ager/db/: __init__.py  models.py  session.py
backend/src/ager/db/migrations/: 0001_init.sql  0002_seed.sql  0003_buildings.sql  0004_engine_state.sql  0005_seed_gameplay.sql  0006_diplomacy_core.sql  0007_diplomacy_seed.sql  __init__.py  runner.py
backend/src/ager/gameplay/: __init__.py  clock.py  deltas.py  engine.py  rules.py
backend/src/ager/gameplay/systems/: __init__.py  build.py  production.py  upkeep.py
backend/tests/: __init__.py  test_ager_init.py  test_api_errors.py  test_api_facade.py  test_engine_memory.py  test_engine_sql.py  test_engine_sql_orm.py  test_file_engine.py  test_health_api.py  test_migrations_runner.py  test_seed_file_storage.py
backend/tests/ai_diplomacy/: test_api_endpoints.py  test_propose_treaty_flow.py  test_proposer_suggestions.py  test_rules_coherence.py  test_tick_cooldown_and_expire.py
backend/tests/gameplay/: __init__.py  test_api_tick_endpoint.py  test_build_system_queue.py  test_clock.py  test_edge_cases.py  test_production_system.py  test_rules_validation.py  test_tick_idempotency.py
backend/tests/ports/: __init__.py  conftest.py  test_simulation_engine_contract.py
backend/tools/: __init__.py  seed_file_storage.py
data/: README.md
(+16 files in other folders)
